--- a/heroku.yml
+++ b/heroku.yml
@@ -1,5 +1,5 @@
 build:
   docker:
-    STORM: Dockerfile
+    PROFFESOR: Dockerfile
 run:
-  STORM: python3 -m main.py
+  PROFFESOR: python3 -m main.py
