--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-    "name": "ꜱ ᴛ ᴏ ʀ ᴍ",
-    "logo": "https://graph.org/file/dc415607712c2ce5b37be.jpg",
+    "name": "𝐏 𝐑 𝐎 𝐅 𝐄 𝐒 𝐒 𝐎 𝐑",
+    "logo": "https://graph.org/file/0cd5ce769e5fe0f7a9f15.jpg",
     "keywords": [
         "telegram",
         "telethon",
@@ -8,7 +8,7 @@
         "PythonX",
         "SpamBots"
     ],
-    "repository": "https://github.com/VARC9210/STORM",
+    "repository": "https://github.com/Itzsahare/PROFESSOR-SPAM",
     "env": {
       "BOT_TOKEN": {
         "description": "ᴛᴇʟᴇɢʀᴀᴍ ʙᴏᴛ ᴛᴏᴋᴇɴ ɢᴇᴛ ᴛʜɪꜱ ᴠᴀʟᴜᴇ ꜰʀᴏᴍ ʙᴏᴛꜰᴀᴛʜᴇʀ",
@@ -67,12 +67,12 @@
       },
       "SUDO_USERS": {
         "description": "ꜱᴜᴅᴏ ᴜꜱᴇʀꜱ ɪᴅ ꜱᴘᴀᴄᴇ ʙʏ ꜱᴘᴀᴄᴇ",
-        "value": "6257927828",
+        "value": "6755136653",
         "required": false
       },
       "OWNER_ID": {
         "description": "ᴏᴡɴᴇʀ ɪᴅ",
-        "value": "6257927828",
+        "value": "6755136653",
         "required": true
       },
       "HEROKU_API_KEY": {
